infrastructure/vault/base/vault-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ui
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: haproxy
    haproxy.ingress.kubernetes.io/rewrite-target: /ui
spec:
  rules:
    - http:
        paths:
          - path: /vault
            pathType: Prefix
            backend:
              service:
                name: vault-ui
                port:
                  number: 8200
